# notar-verify

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
examples/: cert.pem  detached.sig.p7s  key.pem  report.json  rootCA.key  rootCA.pem  rootCA.srl  signer.csr  signer.key  signer.pem  trust.pem
src/: main.rs
src/cms/: verify.rs
src/infra/: fs.rs
src/pdf/: mod.rs  pades.rs
src/report/: mod.rs
src/revocation/: mod.rs
src/x509/: chain.rs
tests/: integration_report.rs  unit_pdf.rs
tests/snapshots/: integration_report__report_warning.snap  integration_report__report_warning.snap.new  integration_report__report_warning.snpa
